# LakeForge-Enterprise-Data-Engineering-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: README.md
airflow/: README.md
airflow/dags/: bronze_ingestion_dag.py  common.py  gold_build_dag.py  health_check_dag.py  silver_transform_dag.py
config/: README.md  settings.py  sources.py
config/sources/: customers.yaml  inventory.yaml  sales.yaml  sales_order_lines.yaml  sales_products.yaml  sales_stores.yaml  suppliers.yaml
data_quality/: README.md  context.py  runner.py  suites.py
dbt/: README.md  dbt_project.yml  profiles.yml
dbt/seeds/: region_metadata.csv
dbt/snapshots/: dim_customer_snapshot.sql
dbt/tests/: assert_fact_sales_extended_amount_non_negative.sql
docker/: README.md
docker/airflow/: Dockerfile  requirements.txt
docker/customer-api/: Dockerfile  app.py
docker/minio/: init-buckets.sh
docker/spark/: Dockerfile  requirements.txt
docs/: README.md  architecture.md  data_dictionary.md  deployment_guide.md  developer_guide.md  interview_notes.md  pipelines.md
great_expectations/: README.md
metadata/: README.md  client.py  schema.py
monitoring/: README.md  health.py  logging_config.py
pipelines/: README.md  storage.py
pipelines/bronze/: README.md  reader.py  writer.py
pipelines/gold/: README.md  common.py  daily_sales_summary.py  dim_customer.py  dim_date.py  dim_product.py  dim_store.py  fact_sales.py  runner.py  schemas.py  writer.py
pipelines/ingestion/: README.md  base.py
pipelines/silver/: README.md  reader.py  runner.py
sample_data/: README.md
sample_data/customers/: customers.json
scripts/: README.md  generate_dbt_local_fixtures.py
spark/: README.md
tests/: README.md  test_sources_config.py  test_storage.py
(+63 files in other folders)
