[project]
name = "openlake"
version = "0.1.0"
description = "Open Source Enterprise Data Lakehouse Platform"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "pyarrow>=17.0",
    "boto3>=1.35",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "requests>=2.32",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "tenacity>=9.0",
    "duckdb>=1.1",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5",
]
airflow = [
    "apache-airflow>=2.10",
]
dbt = [
    "dbt-core>=1.8",
    "dbt-postgres>=1.8",
    "dbt-duckdb>=1.8",
]
quality = [
    "great-expectations>=1.1",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "moto[s3]>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-pyyaml",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines", "metadata", "monitoring", "config", "spark"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["pipelines", "metadata", "monitoring", "config", "spark", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pipelines --cov=metadata --cov=monitoring --cov=config --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
branch = true
omit = ["tests/*"]
